--- a/pom.xml
+++ b/pom.xml
@@ -44,18 +44,9 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>jfree</groupId>
+			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.0.13</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>jfree</groupId>
-			<artifactId>jcommon</artifactId>
-			<version>1.0.15</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>1.0.17</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
