--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.swinglabs.swingx</groupId>
+			<artifactId>swingx-core</artifactId>
+			<version>1.6.5-1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
 			<version>1.0.17</version>
