--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -2,8 +2,8 @@ stocks=ACA.PA,LG.PA
 ALWAYS_ON_TOP=true
 WINDOW_Y=970
 WINDOW_X=0
-proxy.url=192.168.94.10
-proxy.port=3128
-proxy.login=vincent.mokel
-proxy.password=vimo6Sgss
+#proxy.url=192.168.94.10
+#proxy.port=3128
+#proxy.login=vincent.mokel
+#proxy.password=vimo6Sgss
 refresh.time=120000
