--- a/src/main/resources/logger.properties
+++ b/src/main/resources/logger.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to A1.
-log4j.rootLogger=INFO, A1
+log4j.rootLogger=DEBUG, A1
 
 
 # A1 is set to be a ConsoleAppender.
@@ -9,4 +9,4 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern=%-5p %c %x - %m%n
 
-# log4j.logger.fr.mokel.trade.gui.controller.IndicatorBackTest=DEBUG
+log4j.logger.fr.mokel=DEBUG
